fixed about bugs

--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
     <link rel="stylesheet" href="styles/navbarStyle.css" />
     <link rel="stylesheet" href="styles/backgroundPage.css" />
     <link rel="stylesheet" href="styles/mainIconStyle.css" />
+    <link rel="stylesheet" href="styles/mission.css" />
+    <link rel="stylesheet" href="styles/generatlEl.css" />
+    <link rel="stylesheet" href="styles/about.css" />
     <script defer src="javascript/main.js"></script>
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="assets/images/mainIMG.png"
-    />
+    <link rel="icon" type="image/x-icon" href="assets/images/mainIMG.png" />
   </head>
   <body>
     <div id="interactiveImageContainer"></div>
@@ -28,25 +27,34 @@
       </div>
       <div class="mainIcon">
         <div class="imageHolder">
-          <img
-            src="assets/images/mainIMG.png"
-            alt=""
-            id="mainImage"
-          />
+          <img src="assets/images/mainIMG.png" alt="" id="mainImage" />
         </div>
-        <div class="container">
+        <!-- <div class="container">
           <div></div>
           <div></div>
           <div></div>
           <div></div>
           <div></div>
           <div></div>
-        </div>
+        </div> -->
         <div class="backShadow"></div>
       </div>
       <div id="slogan">
         <h2>"Educate the Youth. Create a brighter tomorrow."</h2>
       </div>
+    </div>
+    <div class="background">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
     </div>
     <div class="navbar">
       <div id="backgroundText">
@@ -69,7 +77,7 @@
         <div></div>
       </div>
       <div class="elements">
-        <a id="mission_div" href="pages/ourMission.html">
+        <a id="mission_div">
           <img src="assets/images/navbar/mission_black.png" alt="mission" />
         </a>
         <a id="about_us_div">
