added responsiveness, computer still needs fixing

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
     <div class="navbar">
       <div id="backgroundText">
-        <h1>Teens Teach</h1>
+        <h1>Teens&ensp; Teach</h1>
       </div>
       <div class="imageHolder">
         <img src="assets/images/mainIMG.png" alt="" id="navImage" />
@@ -77,6 +77,9 @@
         <div></div>
       </div>
       <div class="elements">
+        <a id="home_div">
+          <img src="assets/images/navbar/home.png" alt="home" />
+        </a>
         <a id="mission_div">
           <img src="assets/images/navbar/mission_black.png" alt="mission" />
         </a>
