--- a/index.html
+++ b/index.html
@@ -20,29 +20,6 @@
     <link rel="icon" type="image/x-icon" href="assets/images/mainIMG.png" />
   </head>
   <body>
-    <div id="interactiveImageContainer"></div>
-    <div class="frontPage">
-      <div id="title">
-        <h1>Teens Teach</h1>
-      </div>
-      <div class="mainIcon">
-        <div class="imageHolder">
-          <img src="assets/images/mainIMG.png" alt="" id="mainImage" />
-        </div>
-        <!-- <div class="container">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-        </div> -->
-        <div class="backShadow"></div>
-      </div>
-      <div id="slogan">
-        <h2>"Educate the Youth. Create a brighter tomorrow."</h2>
-      </div>
-    </div>
     <div class="background">
       <div></div>
       <div></div>
@@ -56,12 +33,62 @@
       <div></div>
       <div></div>
     </div>
-    <div class="navbar">
-      <div id="backgroundText">
-        <h1>Teens&ensp; Teach</h1>
+    <div class="frontPage">
+      <div class="firstElements">
+        <a id="home_div">
+          <img src="assets/images/navbar/home.png" alt="home" />
+        </a>
+        <a id="mission_div">
+          <img src="assets/images/navbar/mission_black.png" alt="mission" />
+        </a>
+        <a id="about_us_div">
+          <img src="assets/images/navbar/about_us_black.png" alt="about us" />
+        </a>
       </div>
+      <div id="title">
+        <h1>Teens Teach</h1>
+      </div>
+      <div class="lastElements">
+        <a id="impact_div">
+          <img src="assets/images/navbar/impact_black.png" alt="" />
+        </a>
+        <a id="what_we_do_div">
+          <img src="assets/images/navbar/what_we_do_black.png" alt="" />
+          <!-- <h1>What We Do</h1> -->
+        </a>
+        <a id="contact_div">
+          <img src="assets/images/navbar/contact_black.png" alt="" />
+        </a>
+      </div>
+    </div>
+    <div class="mainIcon">
       <div class="imageHolder">
-        <img src="assets/images/mainIMG.png" alt="" id="navImage" />
+        <img src="assets/images/mainIMG.png" alt="" id="mainImage" />
+      </div>
+      <!-- <div class="container">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div> -->
+      <div class="backShadow"></div>
+    </div>
+    <div id="slogan">
+      <h2>"Educate the Youth. Create a brighter tomorrow."</h2>
+    </div>
+    <div class="navbar">
+      <div class="customWidget">
+        <div class="option">
+          <h1>hello</h1>
+        </div>
+        <div class="imageHolder">
+          <img src="assets/images/mainIMG.png" alt="" id="navImage" />
+        </div>
+        <div class="option">
+          <h1>goodbye</h1>
+        </div>
       </div>
       <div class="navContainer">
         <div></div>
@@ -75,30 +102,6 @@
         <div></div>
         <div></div>
         <div></div>
-      </div>
-      <div class="elements">
-        <a id="home_div">
-          <img src="assets/images/navbar/home.png" alt="home" />
-        </a>
-        <a id="mission_div">
-          <img src="assets/images/navbar/mission_black.png" alt="mission" />
-        </a>
-        <a id="about_us_div">
-          <img src="assets/images/navbar/about_us_black.png" alt="about us" />
-        </a>
-        <a id="impact_div">
-          <img src="assets/images/navbar/impact_black.png" alt="" />
-        </a>
-        <a id="what_we_do_div">
-          <img src="assets/images/navbar/what_we_do_black.png" alt="" />
-          <!-- <h1>What We Do</h1> -->
-        </a>
-        <a id="contact_div">
-          <img src="assets/images/navbar/contact_black.png" alt="" />
-        </a>
-        <a id="donate_div">
-          <img src="assets/images/navbar/Donate_Black.png" alt="donate" />
-        </a>
       </div>
     </div>
   </body>
