changed up navBar

--- a/index.html
+++ b/index.html
@@ -35,26 +35,26 @@
     </div>
     <div class="frontPage">
       <div class="firstElements">
-        <a id="home_div">
-          <img src="assets/images/navbar/home.png" alt="home" />
-        </a>
-        <a id="mission_div">
-          <img src="assets/images/navbar/mission_black.png" alt="mission" />
-        </a>
-        <a id="about_us_div">
-          <img src="assets/images/navbar/about_us_black.png" alt="about us" />
-        </a>
-      </div>
-      <div id="title">
-        <h1>Teens Teach</h1>
-      </div>
-      <div class="lastElements">
         <a id="impact_div">
           <img src="assets/images/navbar/impact_black.png" alt="" />
         </a>
         <a id="what_we_do_div">
           <img src="assets/images/navbar/what_we_do_black.png" alt="" />
           <!-- <h1>What We Do</h1> -->
+        </a>
+        <a id="forum_div">
+          <img src="assets/images/navbar/growth.png" alt="about us" />
+        </a>
+      </div>
+      <div id="title">
+        <h1>Teens Teach</h1>
+      </div>
+      <div class="lastElements">
+        <a id="home_div" href="index.html">
+          <img src="assets/images/navbar/active/home.png" alt="home" />
+        </a>
+        <a id="mission_div" href="pages/ourMission.html">
+          <img src="assets/images/navbar/mission_black.png" alt="mission" />
         </a>
         <a id="contact_div">
           <img src="assets/images/navbar/contact_black.png" alt="" />
@@ -78,31 +78,29 @@
     <div id="slogan">
       <h2>"Educate the Youth. Create a brighter tomorrow."</h2>
     </div>
-    <div class="navbar">
-      <div class="customWidget">
-        <div class="option">
-          <h1>hello</h1>
-        </div>
-        <div class="imageHolder">
-          <img src="assets/images/mainIMG.png" alt="" id="navImage" />
-        </div>
-        <div class="option">
-          <h1>goodbye</h1>
-        </div>
+    <div class="customWidget">
+      <div class="option">
+        <h1>hello</h1>
       </div>
-      <div class="navContainer">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+      <div class="imageHolder">
+        <img src="assets/images/mainIMG.png" alt="" id="navImage" />
       </div>
+      <div class="option">
+        <h1>goodbye</h1>
+      </div>
+    </div>
+    <div class="navContainer">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
     </div>
   </body>
 </html>
