--- a/index.html
+++ b/index.html
@@ -35,15 +35,16 @@
     </div>
     <div class="frontPage">
       <div class="firstElements">
-        <a id="impact_div">
-          <img src="assets/images/navbar/impact_black.png" alt="" />
-        </a>
-        <a id="what_we_do_div">
-          <img src="assets/images/navbar/what_we_do_black.png" alt="" />
-          <!-- <h1>What We Do</h1> -->
-        </a>
         <a id="forum_div">
           <img src="assets/images/navbar/growth.png" alt="about us" />
+        </a>
+
+        <a id="study_div">
+          <img src="assets/images/navbar/open-book.png" alt="" />
+          <!-- <h1>What We Do</h1> -->
+        </a>
+        <a id="community_div">
+          <img src="assets/images/navbar/community.png" alt="" />
         </a>
       </div>
       <div id="title">
@@ -61,6 +62,9 @@
         </a>
       </div>
     </div>
+    <div id="slogan">
+      <h2>"Educate the Youth. Create a brighter tomorrow."</h2>
+    </div>
     <div class="mainIcon">
       <div class="imageHolder">
         <img src="assets/images/mainIMG.png" alt="" id="mainImage" />
@@ -73,22 +77,23 @@
         <div></div>
         <div></div>
       </div> -->
-      <div class="backShadow"></div>
+      <!-- <div class="backShadow"></div> -->
     </div>
-    <div id="slogan">
-      <h2>"Educate the Youth. Create a brighter tomorrow."</h2>
+    
+    <div class="widgetContainer">
+      <div class="customWidget">
+        <div class="option">
+          <h1 id="sloganButton">Slogan</h1>
+        </div>
+        <div class="imageHolder">
+          <img src="assets/images/mainIMG.png" alt="" id="navImage" />
+        </div>
+        <div class="option">
+          <h1 id="factButton">Random Fact</h1>
+        </div>
+      </div>
     </div>
-    <div class="customWidget">
-      <div class="option">
-        <h1>hello</h1>
-      </div>
-      <div class="imageHolder">
-        <img src="assets/images/mainIMG.png" alt="" id="navImage" />
-      </div>
-      <div class="option">
-        <h1>goodbye</h1>
-      </div>
-    </div>
+
     <div class="navContainer">
       <div></div>
       <div></div>
