cleanedUp nav bar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles/navbarStyle.css" />
     <link rel="stylesheet" href="styles/backgroundPage.css" />
     <link rel="stylesheet" href="styles/mainIconStyle.css" />
-    <link rel="stylesheet" href="styles/mission.css" />
+    <link rel="stylesheet" href="styles/index.css" />
     <link rel="stylesheet" href="styles/generatlEl.css" />
     <link rel="stylesheet" href="styles/about.css" />
     <script defer src="javascript/main.js"></script>
@@ -33,33 +33,36 @@
       <div></div>
       <div></div>
     </div>
-    <div class="frontPage">
-      <div class="firstElements">
-        <a id="forum_div">
-          <img src="assets/images/navbar/growth.png" alt="about us" />
-        </a>
+    <div class="frontContainer">
+      <div class="frontPage">
+        <div class="firstElements">
+          <a id="forum_div">
+            <img src="assets/images/navbar/growth.png" alt="about us" />
+          </a>
 
-        <a id="study_div">
-          <img src="assets/images/navbar/open-book.png" alt="" />
-          <!-- <h1>What We Do</h1> -->
-        </a>
-        <a id="community_div">
-          <img src="assets/images/navbar/community.png" alt="" />
-        </a>
-      </div>
-      <div id="title">
-        <h1>Teens Teach</h1>
-      </div>
-      <div class="lastElements">
-        <a id="home_div" href="index.html">
-          <img src="assets/images/navbar/active/home.png" alt="home" />
-        </a>
-        <a id="mission_div" href="pages/ourMission.html">
-          <img src="assets/images/navbar/mission_black.png" alt="mission" />
-        </a>
-        <a id="contact_div">
-          <img src="assets/images/navbar/contact_black.png" alt="" />
-        </a>
+          <a id="study_div">
+            <img src="assets/images/navbar/open-book.png" alt="" />
+            <!-- <h1>What We Do</h1> -->
+          </a>
+          <a id="community_div">
+            <img src="assets/images/navbar/community.png" alt="" />
+          </a>
+        </div>
+
+        <div id="title">
+          <h1>Teens Teach</h1>
+        </div>
+        <div class="lastElements">
+          <a id="home_div" href="index.html">
+            <img src="assets/images/navbar/active/home.png" alt="home" />
+          </a>
+          <a id="mission_div" href="pages/ourMission.html">
+            <img src="assets/images/navbar/mission (2).png" alt="mission" />
+          </a>
+          <a id="contact_div">
+            <img src="assets/images/navbar/contact_black.png" alt="" />
+          </a>
+        </div>
       </div>
     </div>
     <div id="slogan">
@@ -69,17 +72,8 @@
       <div class="imageHolder">
         <img src="assets/images/mainIMG.png" alt="" id="mainImage" />
       </div>
-      <!-- <div class="container">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div> -->
-      <!-- <div class="backShadow"></div> -->
     </div>
-    
+
     <div class="widgetContainer">
       <div class="customWidget">
         <div class="option">
