--- a/pages/ourMission.html
+++ b/pages/ourMission.html
@@ -19,12 +19,55 @@
     <link rel="icon" type="image/x-icon" href="../assets/images/mainIMG.png" />
   </head>
   <body>
-    <div id="interactiveImageContainer"></div>
+    <div class="background">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="frontContainer">
+      <div class="frontPage">
+        <div class="firstElements">
+          <a id="forum_div">
+            <img src="../assets/images/navbar/growth.png" alt="about us" />
+          </a>
+
+          <a id="study_div">
+            <img src="../assets/images/navbar/open-book.png" alt="" />
+            <!-- <h1>What We Do</h1> -->
+          </a>
+          <a id="community_div">
+            <img src="../assets/images/navbar/community.png" alt="" />
+          </a>
+        </div>
+        <div id="title">
+          <h1>Teens Teach</h1>
+        </div>
+        <div class="lastElements">
+          <a id="home_div" href="../index.html">
+            <img src="../assets/images/navbar/home.png" alt="home" />
+          </a>
+          <a id="mission_div" href="../pages/ourMission.html">
+            <img
+              src="../assets/images/navbar/active/mission (3).png"
+              alt="mission"
+            />
+          </a>
+          <a id="contact_div">
+            <img src="../assets/images/navbar/contact_black.png" alt="" />
+          </a>
+        </div>
+      </div>
+    </div>
     <div class="fullPage">
       <div class="mainSection">
-        <div class="divContainer">
-          <div id="pageTitle">Our Mission</div>
-        </div>
         <div class="divContainer">
           <div id="missionStatement" class="tile">
             <p class="smallText">
@@ -54,60 +97,23 @@
           </div>
         </div>
       </div>
-      <div class="background">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-    </div>
-    <div class="navbar">
-      <div id="backgroundText">
-        <h1>Teens Teach</h1>
-      </div>
-      <div class="imageHolder">
-        <img src="../assets/images/mainIMG.png" alt="" id="navImage" />
-      </div>
-      <div class="navContainer">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <div class="elements">
-        <a id="mission_div" href="ourMission.html">
-          <img src="../assets/images/navbar/mission_black.png" alt="mission" />
-        </a>
-        <a id="about_us_div" href="aboutUs.html">
-          <img src="../assets/images/navbar/about_us_black.png" alt="about us" />
-        </a>
-        <a id="impact_div">
-          <img src="../assets/images/navbar/impact_black.png" alt="" />
-        </a>
-        <a id="what_we_do_div">
-          <img src="../assets/images/navbar/what_we_do_black.png" alt="" />
-          <!-- <h1>What We Do</h1> -->
-        </a>
-        <a id="contact_div">
-          <img src="../assets/images/navbar/contact_black.png" alt="" />
-        </a>
-        <a id="donate_div">
-          <img src="../assets/images/navbar/Donate_Black.png" alt="donate" />
-        </a>
+      <div class="widgetContainer">
+        <div class="customWidget">
+          <div class="option">
+            <a href="ourMission.html"
+              ><h1 id="missionButton">Our Mission</h1></a
+            >
+          </div>
+          <div class="imageHolder">
+            <img src="../assets/images/mainIMG.png" alt="" id="navImage" />
+          </div>
+          <div class="option">
+            <a href="mission/ourImpact.html"> <h1>Impact</h1></a>
+          </div>
+          <div class="option">
+            <a href=""><h1>About Us</h1></a>
+          </div>
+        </div>
       </div>
     </div>
   </body>
