almost done with left side of nav bar

--- a/pages/ourMission.html
+++ b/pages/ourMission.html
@@ -66,53 +66,49 @@
         </div>
       </div>
     </div>
-    <div class="fullPage">
-      <div class="mainSection">
-        <div class="divContainer">
-          <div id="missionStatement" class="tile">
-            <p class="smallText">
-              Educate the Youth, Create a Brighter Tomorrow
-            </p>
-          </div>
-        </div>
-        <div class="divContainer">
-          <div id="missionParagraph" class="tile">
-            <p class="smallText">
-              In an ever changing society, it is crucial for the new generation
-              to foster a deep understanding of the world around them. Only with
-              this understanding can the leaders of tomorrow advance humanity
-              and innovate our world towards a brighter future.
-            </p>
-          </div>
-        </div>
-        <div class="divContainer">
-          <div id="missionParagraph" class="tile">
-            <p class="smallText">
-              At Teens Teach, we look to instill an intrinsic desire for
-              knowledge within the youth. Through our fresh perspective, we
-              create captivating, informative videos from teenagers, for
-              teenagers. We utilize our platform to provide educational
-              opportunities and empower others with the gift of education.
-            </p>
-          </div>
+    <div class="mainSection">
+      <div class="divContainer">
+        <div id="missionStatement" class="tile">
+          <p class="smallText">Educate the Youth, Create a Brighter Tomorrow</p>
         </div>
       </div>
-      <div class="widgetContainer">
-        <div class="customWidget">
-          <div class="option">
-            <a href="ourMission.html"
-              ><h1 id="missionButton">Our Mission</h1></a
-            >
-          </div>
-          <div class="imageHolder">
-            <img src="../assets/images/mainIMG.png" alt="" id="navImage" />
-          </div>
-          <div class="option">
-            <a href="mission/ourImpact.html"> <h1>Impact</h1></a>
-          </div>
-          <div class="option">
-            <a href=""><h1>About Us</h1></a>
-          </div>
+      <div class="divContainer">
+        <div id="missionParagraph" class="tile">
+          <p class="smallText">
+            In an ever changing society, it is crucial for the new generation to
+            foster a deep understanding of the world around them. Only with this
+            understanding can the leaders of tomorrow advance humanity and
+            innovate our world towards a brighter future.
+          </p>
+        </div>
+      </div>
+      <div class="divContainer">
+        <div id="missionParagraph" class="tile">
+          <p class="smallText">
+            At Teens Teach, we look to instill an intrinsic desire for knowledge
+            within the youth. Through our fresh perspective, we create
+            captivating, informative videos from teenagers, for teenagers. We
+            utilize our platform to provide educational opportunities and
+            empower others with the gift of education.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="widgetContainer">
+      <div class="customWidget">
+        <div class="option">
+          <a href="ourMission.html"><h1 id="missionButton">Our Mission</h1></a>
+        </div>
+        <div class="imageHolder">
+          <img src="../assets/images/mainIMG.png" alt="" id="navImage" />
+        </div>
+        <div class="option">
+          <a href="mission/ourImpact.html">
+            <h1 id="impactButton">Impact</h1></a
+          >
+        </div>
+        <div class="option">
+          <a href="mission/aboutUs.html"><h1 id="aboutButton">About Us</h1></a>
         </div>
       </div>
     </div>
