--- a/pages/mission/ourImpact.html
+++ b/pages/mission/ourImpact.html
@@ -1,79 +1,166 @@
-<!-- // import { ReactElement } from "react";
-function ImpactPage() {
-  return (
-    <div className="fullPage">
-      <div className="mainWrap">
-        <div className="divContainer">
-          <div id="pageTitle">Our Impact</div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="../assets/images/mainIMG.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Teens Teach</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../../styles/navbarStyle.css" />
+    <link rel="stylesheet" href="../../styles/backgroundPage.css" />
+    <link rel="stylesheet" href="../../styles/mainIconStyle.css" />
+    <link rel="stylesheet" href="../../styles/generatlEl.css" />
+    <link rel="stylesheet" href="../../styles/mission.css" />
+    <link rel="stylesheet" href="../../styles/contact.css" />
+    <!-- <script defer src="../../javascript/main.js"></script> -->
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="../../assets/images/mainIMG.png"
+    />
+  </head>
+  <body>
+    <div class="background">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="frontContainer">
+      <div class="frontPage">
+        <div class="firstElements">
+          <a id="forum_div">
+            <img src="../../assets/images/navbar/growth.png" alt="about us" />
+          </a>
+
+          <a id="study_div">
+            <img src="../../assets/images/navbar/open-book.png" alt="" />
+            <!-- <h1>What We Do</h1> -->
+          </a>
+          <a id="community_div">
+            <img src="../../assets/images/navbar/community.png" alt="" />
+          </a>
         </div>
-        <div className="wrapContainer">
-          <div className="wrapTile">
-            <p className="impactText">10k+ views</p>
-          </div>
+
+        <div id="title">
+          <h1>Teens Teach</h1>
         </div>
-        <div className="wrapContainer">
-          <div className="wrapTile">
-            <p className="impactText">20k+ impressions</p>
-          </div>
+        <div class="lastElements">
+          <a id="home_div" href="index.html">
+            <img src="../../assets/images/navbar/home.png" alt="home" />
+          </a>
+          <a id="mission_div" href="pages/ourMission.html">
+            <img
+              src="../../assets/images/navbar/active/mission (3).png"
+              alt="mission"
+            />
+          </a>
+          <a id="contact_div">
+            <img src="../../assets/images/navbar/contact_black.png" alt="" />
+          </a>
         </div>
-        <div className="wrapContainer">
-          <div className="wrapTile">
-            <p className="impactText">100+ followers</p>
-          </div>
-        </div>
-        <div className="wrapContainer">
-          <div className="wrapTile">
-            <p className="impactText">20+ videos</p>
-          </div>
-        </div>
-        <div className="wrapContainer">
-          <div className="wrapTile">
-            <p className="impactText">300+ likes</p>
-          </div>
-        </div>
-        <div className="divContainer">
-          <div id="pageTitle">Topics Covered</div>
-        </div>
-        <div className="wrapContainer">
-          <div className="wrapTile">
-            <p className="impactText">Current Events</p>
-          </div>
-        </div>
-        <div className="wrapContainer">
-          <div className="wrapTile">
-            <p className="impactText">Global Warming</p>
-          </div>
-        </div>
-        <div className="wrapContainer">
-          <div className="wrapTile">
-            <p className="impactText">SAT Concepts</p>
-          </div>
-        </div>
-        <div className="wrapContainer">
-          <div className="wrapTile">
-            <p className="impactText">Artificial Intelligence</p>
-          </div>
-        </div>
-        <div className="wrapContainer">
-          <div className="wrapTile">
-            <p className="impactText">Quantum Computing</p>
-          </div>
-        </div>
-      </div>
-      <div className="background">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
       </div>
     </div>
-  );
-}
-export default ImpactPage; -->
+    <div className="mainWrap">
+      <div className="divContainer">
+        <div id="pageTitle">Our Impact</div>
+      </div>
+      <div className="wrapContainer">
+        <div className="wrapTile">
+          <p className="impactText">10k+ views</p>
+        </div>
+      </div>
+      <div className="wrapContainer">
+        <div className="wrapTile">
+          <p className="impactText">20k+ impressions</p>
+        </div>
+      </div>
+      <div className="wrapContainer">
+        <div className="wrapTile">
+          <p className="impactText">100+ followers</p>
+        </div>
+      </div>
+      <div className="wrapContainer">
+        <div className="wrapTile">
+          <p className="impactText">20+ videos</p>
+        </div>
+      </div>
+      <div className="wrapContainer">
+        <div className="wrapTile">
+          <p className="impactText">300+ likes</p>
+        </div>
+      </div>
+      <div className="divContainer">
+        <div id="pageTitle">Topics Covered</div>
+      </div>
+      <div className="wrapContainer">
+        <div className="wrapTile">
+          <p className="impactText">Current Events</p>
+        </div>
+      </div>
+      <div className="wrapContainer">
+        <div className="wrapTile">
+          <p className="impactText">Global Warming</p>
+        </div>
+      </div>
+      <div className="wrapContainer">
+        <div className="wrapTile">
+          <p className="impactText">SAT Concepts</p>
+        </div>
+      </div>
+      <div className="wrapContainer">
+        <div className="wrapTile">
+          <p className="impactText">Artificial Intelligence</p>
+        </div>
+      </div>
+      <div className="wrapContainer">
+        <div className="wrapTile">
+          <p className="impactText">Quantum Computing</p>
+        </div>
+      </div>
+    </div>
+    <div className="background">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="widgetContainer">
+      <div class="customWidget">
+        <div class="option">
+          <a href="../ourMission.html"
+            ><h1 id="missionButton">Our Mission</h1></a
+          >
+        </div>
+        <div class="imageHolder">
+          <img src="../../assets/images/mainIMG.png" alt="" id="navImage" />
+        </div>
+        <div class="option">
+          <a href="ourImpact.html"> <h1>Impact</h1></a>
+        </div>
+        <div class="option">
+          <a href="aboutUs.html"><h1 id="aboutButton">About Us</h1></a>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
