almost done with webpage

--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
     <div class="frontContainer">
       <div class="frontPage">
         <div class="firstElements">
-          <a id="forum_div">
+          <a id="forum_div" href="pages/forum.html">
             <img src="assets/images/navbar/growth.png" alt="about us" />
           </a>
 
-          <a id="study_div">
+          <a id="study_div" href="pages/study.html">
             <img src="assets/images/navbar/open-book.png" alt="" />
             <!-- <h1>What We Do</h1> -->
           </a>
-          <a id="community_div">
+          <a id="community_div" href="pages/community.html">
             <img src="assets/images/navbar/community.png" alt="" />
           </a>
         </div>
@@ -54,13 +54,13 @@
         </div>
         <div class="lastElements">
           <a id="home_div" href="index.html">
-            <img src="assets/images/navbar/active/home.png" alt="home" />
+            <img src="assets/images/navbar/active/home (2).png" alt="home" />
           </a>
           <a id="mission_div" href="pages/ourMission.html">
             <img src="assets/images/navbar/mission (2).png" alt="mission" />
           </a>
-          <a id="contact_div">
-            <img src="assets/images/navbar/contact_black.png" alt="" />
+          <a id="account_div" href="pages/account.html">
+            <img src="assets/images/navbar/user (1).png" alt="" />
           </a>
         </div>
       </div>
@@ -88,18 +88,5 @@
       </div>
     </div>
 
-    <div class="navContainer">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
   </body>
 </html>
