--- a/pages/mission/aboutUs.html
+++ b/pages/mission/aboutUs.html
@@ -59,14 +59,14 @@
           <h1>Teens Teach</h1>
         </div>
         <div class="lastElements">
-          <a id="home_div" href="index.html">
-            <img src="../../assets/images/navbar/home.png" alt="home" />
+          <a id="home_div" href="../../index.html">
+            <img src="../../assets/images/navbar/home (1).png" alt="home" />
           </a>
           <a id="mission_div" href="pages/ourMission.html">
             <img src="../../assets/images/navbar/active/mission (3).png" alt="mission" />
           </a>
-          <a id="contact_div">
-            <img src="../../assets/images/navbar/contact_black.png" alt="" />
+          <a id="account_div" href="../account.html">
+            <img src="../../assets/images/navbar/user (1).png" alt="" />
           </a>
         </div>
       </div>
