--- a/pages/forum.html
+++ b/pages/forum.html
@@ -35,7 +35,7 @@
     <div class="frontContainer">
       <div class="frontPage">
         <div class="firstElements">
-          <a id="forum_div">
+          <a id="forum_div" href="forum.html">
             <img src="../assets/images/navbar/growth.png" alt="about us" />
           </a>
 
@@ -97,18 +97,21 @@
     <div class="widgetContainer">
       <div class="customWidget">
         <div class="option">
-          <a href="ourMission.html"><h1 id="missionButton">Our Mission</h1></a>
+          <a href="forum.html"><h1 id="missionButton">Articles</h1></a>
         </div>
+        <div class="option">
+            <a href="forum/news.html"><h1 id="newsButton">News</h1></a>
+          </div>
         <div class="imageHolder">
           <img src="../assets/images/mainIMG.png" alt="" id="navImage" />
         </div>
         <div class="option">
-          <a href="mission/ourImpact.html">
-            <h1 id="impactButton">Impact</h1></a
+          <a href="forum/chat.html">
+            <h1 id="impactButton">Chat</h1></a
           >
         </div>
         <div class="option">
-          <a href="mission/aboutUs.html"><h1 id="aboutButton">About Us</h1></a>
+          <a href="forum/videos.html"><h1 id="videosButton">Videos</h1></a>
         </div>
       </div>
     </div>
