--- a/pages/account.html
+++ b/pages/account.html
@@ -42,11 +42,11 @@
     <div class="frontContainer">
       <div class="frontPage">
         <div class="firstElements">
-          <a id="forum_div">
+          <a id="forum_div" href="../pages/forum.html">
             <img src="../../assets/images/navbar/growth.png" alt="about us" />
           </a>
 
-          <a id="study_div">
+          <a id="study_div" href="../pages/study.html">
             <img src="../../assets/images/navbar/open-book.png" alt="" />
             <!-- <h1>What We Do</h1> -->
           </a>
@@ -62,7 +62,7 @@
           <a id="home_div" href="../../index.html">
             <img src="../assets/images/navbar/home (1).png" alt="home" />
           </a>
-          <a id="mission_div" href="pages/ourMission.html">
+          <a id="mission_div" href="../pages/ourMission.html">
             <img
               src="../../assets/images/navbar/mission (2).png"
               alt="mission"
@@ -74,13 +74,13 @@
         </div>
       </div>
     </div>
-    <div
+    <!-- <div
       id="g_id_onload"
       data-client_id="YOUR_GOOGLE_CLIENT_ID"
       data-login_uri="https://your.domain/your_login_endpoint"
       data-your_own_param_1_to_login="any_value"
       data-your_own_param_2_to_login="any_value"
-    ></div>
+    ></div> -->
     <div class="widgetContainer">
       <div class="customWidget">
         <div class="option">
