--- a/pages/forum.html
+++ b/pages/forum.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="../styles/navbarStyle.css" />
     <link rel="stylesheet" href="../styles/backgroundPage.css" />
     <link rel="stylesheet" href="../styles/mainIconStyle.css" />
-    <link rel="stylesheet" href="../styles/mission.css" />
+    <link rel="stylesheet" href="../styles/articles.css" />
     <link rel="stylesheet" href="../styles/generatlEl.css" />
-    <script defer src="../javascript/main.js"></script>
+    <!-- <script defer src="../javascript/main.js"></script> -->
     <link rel="icon" type="image/x-icon" href="../assets/images/mainIMG.png" />
   </head>
   <body>
@@ -36,10 +36,12 @@
       <div class="frontPage">
         <div class="firstElements">
           <a id="forum_div" href="forum.html">
-            <img src="../assets/images/navbar/growth.png" alt="about us" />
+            <img
+              src="../assets/images/navbar/active/growth (2).png"
+              alt="about us"
+            /><!--Make this the blue growth thingl-->
           </a>
-
-          <a id="study_div">
+          <a id="study_div" href="study.html">
             <img src="../assets/images/navbar/open-book.png" alt="" />
             <!-- <h1>What We Do</h1> -->
           </a>
@@ -55,10 +57,7 @@
             <img src="../assets/images/navbar/home (1).png" alt="home" />
           </a>
           <a id="mission_div" href="../pages/ourMission.html">
-            <img
-              src="../assets/images/navbar/active/mission (3).png"
-              alt="mission"
-            />
+            <img src="../assets/images/navbar/mission (2).png" alt="mission" />
           </a>
           <a id="account_div" href="account.html">
             <img src="../assets/images/navbar/user (1).png" alt="" />
@@ -67,13 +66,205 @@
       </div>
     </div>
     <div class="mainSection">
-      <div class="divContainer">
-        <div id="missionStatement" class="tile">
-          <p class="smallText">Educate the Youth, Create a Brighter Tomorrow</p>
+      <div class="articleTile">
+        <div id="infoContainer">
+          <div id="postDate">
+            <p class="dateText">10/16/23</p>
+          </div>
+          <div id="userTitle">
+            <p class="userTitleText">Overrated</p>
+          </div>
+          <div id="authorBox">
+            <div id="userProfile">
+              <img src="../assets/images/mainIMG.png" alt="" />
+            </div>
+            <div id="userName">
+              <p class="userNameText">Lamarr Olive</p>
+            </div>
+          </div>
+        </div>
+        <div id="article">
+          <p class="articleText">
+            In an attempt to analyze the public opinion of a topic combined with
+            the actual function, humans haven’t yet come up with a
+            straightforward formula. Instead, we tend to use the term,
+            underrated and overrated, distinguishing something with a negative
+            or lackluster public percephen with great value from something with
+            and overwhelming public perception with underperforming function.
+            When discussing whether something is overrated, there are typically
+            three separate groups of individuals that use the term: those who
+            have disappointed expectations, those who hate the discussed topic,
+            and the bandwagon followers. All of these opinions combine to impact
+            the status of a topic, whether it is overrated or not. But is there
+            any legitimacy to this status? The beginning of the overrated web is
+            the glorification of a position or subject. For instance, if an
+            individual greatly values popularity and what it would be like to be
+            famous, this is where something being overrated begins. As a result
+            of this glorification, that individual works relentlessly to become
+            famous, perfecting their craft until they have accomplished their
+            goal. But in this transition to becoming famous, there is no sudden
+            switch in environment or demeanor, but rather a gradual evolution of
+            an individual and their public perception. Looking back to their
+            original goal of fame, that individual realizes that they are pretty
+            much the same as they were when they set out to achieve their
+            dreams. Gradually, the reality of fame and popularity begins to fall
+            short of their perceptions. From there, that individual believes
+            that fame is overrated, simply due to the fact that they are still a
+            similar individual, abiding by the same laws, in the same body. This
+            is something that happens to many famous people across the world.
+            For instance, when Billie Eillish set out with the goal of being a
+            famous musician, she honed her craft, sacrificed her childhood, and
+            eventually reached her goals. However, she often mentions how being
+            famous is not exactly as she expected it to be, as she gave up her
+            childhood for her dreams. However, the success of Billie Eillish
+            begins to get envie from onlookers, who now want to do what she
+            does. This in turns, restarts the cycle of something being
+            overrated. However, this failed expectations of these individuals
+            are not the only contributor to the perception of something being
+            overrated. Much of this believe of something being overrated is
+            based on the perception of the individual. This individual further
+            pushes the idea that something is overrated, simply based on their
+            beliefs. Going back to the Billie Eillish example, some individuals
+            may dislike her music. This individual will see the success of
+            Billie Eillish, listen to her music, and they just won’t like it. In
+            their mind, things won’t add up, based on the popularity of Eillish,
+            she must make amazing music. In reality, popularity and function are
+            not linear. There is no exact equation that states that the more
+            popular someone is, the better their music will be. As a result,
+            when the magnitude of an individual’s popularity does not match up
+            with their performance, something just doesn’t make sense. As a
+            result, a narrative begins to form. Now, Billie Eillish is
+            overrated. Slowly, that narrative begins to spread, expanding the
+            overrated web. Throughout all of history, there tends to be an anti
+            thesis as well as a thesis. This thesis will be well established and
+            solidified throughout a long time span. However, gradually, there
+            begins to be an anti thesis, led by contrasting minds, who believe
+            in an alternative, the anti thesis. This same pattern occurs within
+            social life. Some truly believe in the anti thesis, whereas others
+            just want to be contrarian; just want to be different from the rest.
+            When there is a large instance of popularity occurring within a
+            product or individual, that is the thesis. However, as occurs within
+            history, there is an opposition to this thesis. This opposition is
+            the overrated narrative. Individuals see the widespread success of
+            something and simply want to express an opposing idea. They desire
+            to be different, just for the sake of being different. This
+            contrarian narrative begins to spread, further spreading the
+            overrated web. The terms underrated and overrated, are utilized to
+            establish a correlation between public perception of a subject or
+            and individual and their actual value. However, this concept of
+            something being overrated is largely arbitrary and presents three
+            separate groups of individuals: those who have disappointed
+            expectations, those who hate the discussed topic, and the bandwagon
+            followers. These individual combine to create the overrated web, a
+            dynamic cycle in which public perception is altered and as a result
+            a narrative is formed.
+          </p>
+        </div>
+        <hr />
+        <div id="reactions">
+          <div id="like">
+            <div id="likeImage"><img src="../assets/images/navbar/like (1).png" alt=""></div>
+            <div id="likeResponse"><p>2</p></div>
+            <div id="likeDescription">
+              <p>Like</p>
+            </div>
+          </div>
+          <div id="heart">
+            <div id="heartImage"><img src="../assets/images/navbar/heart.png" alt=""></div>
+            <div id="heartResponse"><p>2</p></div>
+            <div id="heartDescription">
+              <p>Heart</p>
+            </div>
+          </div>
+          <div id="thought">
+            <div id="thoughtImage"><img src="../assets/images/navbar/lightbulb (1).png" alt=""></div>
+            <div id="thoughtResponse"><p>2</p></div>
+            <div id="thoughtDescription">
+              <p>Thought Provoking</p>
+            </div>
+          </div>
+          <div id="fire">
+            <div id="fireImage"><img src="../assets/images/navbar/fire.png" alt=""></div>
+            <div id="fireResponse"><p>4</p></div>
+            <div id="fireDescription">
+              <p>Fire</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="articleTile">
+        <div id="infoContainer">
+          <div id="postDate">
+            <p class="dateText">10/16</p>
+          </div>
+          <div id="userTitle">
+            <p class="userTitleText">Loremm</p>
+          </div>
+          <div id="authorBox">
+            <div id="userProfile">
+              <img src="../assets/images/mainIMG.png" alt="" />
+            </div>
+            <div id="userName">
+              <p class="userNameText">Kennedy Sheppard</p>
+            </div>
+          </div>
+        </div>
+        <div id="article">
+          <p class="articleText">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem
+            officiis explicabo tenetur recusandae placeat deserunt dolor,
+            perferendis rerum provident perspiciatis eveniet, natus minima
+            numquam! Vitae delectus eligendi aperiam! Ad, dignissimos. Lorem
+            ipsum dolor sit amet consectetur adipisicing elit. Magni eum rem
+            veniam similique rerum cum aliquid corrupti facere accusamus
+            impedit, quo quia perspiciatis cupiditate blanditiis eveniet.
+            Pariatur iusto doloribus facere? Lorem ipsum dolor sit amet,
+            consectetur adipisicing elit. Soluta, alias? Illo, accusantium sed.
+            Veritatis, voluptates consectetur, sit expedita iure explicabo quia
+            corporis labore maxime voluptatem molestias laborum rem inventore
+            fugiat? Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Sunt aliquid harum, impedit beatae labore animi. Officia velit,
+            excepturi quos omnis voluptas esse repudiandae numquam a, animi
+            exercitationem neque libero ab! Lorem, ipsum dolor sit amet
+            consectetur adipisicing elit. Ipsum quaerat quo earum eligendi ullam
+            quam libero natus ab autem saepe laboriosam modi laudantium, velit
+            repellendus veniam ipsam pariatur fugiat sint?
+          </p>
+        </div>
+        <hr />
+        <div id="reactions">
+          <div id="like">
+            <div id="likeImage"></div>
+            <div id="likeResponse"><p>2</p></div>
+            <div id="likeDescription">
+              <p>Like</p>
+            </div>
+          </div>
+          <div id="heart">
+            <div id="heartImage"></div>
+            <div id="heartResponse"><p>2</p></div>
+            <div id="heartDescription">
+              <p>Heart</p>
+            </div>
+          </div>
+          <div id="thought">
+            <div id="thoughtImage"></div>
+            <div id="thoughtResponse"><p>2</p></div>
+            <div id="thoughtDescription">
+              <p>Thought Provoking</p>
+            </div>
+          </div>
+          <div id="fire">
+            <div id="fireImage"></div>
+            <div id="fireResponse"><p>4</p></div>
+            <div id="fireDescription">
+              <p>Fire</p>
+            </div>
+          </div>
         </div>
       </div>
       <div class="divContainer">
-        <div id="missionParagraph" class="tile">
+        <div id="article" class="tile">
           <p class="smallText">
             In an ever changing society, it is crucial for the new generation to
             foster a deep understanding of the world around them. Only with this
@@ -97,18 +288,16 @@
     <div class="widgetContainer">
       <div class="customWidget">
         <div class="option">
-          <a href="forum.html"><h1 id="missionButton">Articles</h1></a>
+          <a href="forum.html"><h1 id="articleButton">Articles</h1></a>
         </div>
         <div class="option">
-            <a href="forum/news.html"><h1 id="newsButton">News</h1></a>
-          </div>
+          <a href="forum/news.html"><h1 id="newsButton">News</h1></a>
+        </div>
         <div class="imageHolder">
           <img src="../assets/images/mainIMG.png" alt="" id="navImage" />
         </div>
         <div class="option">
-          <a href="forum/chat.html">
-            <h1 id="impactButton">Chat</h1></a
-          >
+          <a href="forum/chat.html"> <h1 id="impactButton">Chat</h1></a>
         </div>
         <div class="option">
           <a href="forum/videos.html"><h1 id="videosButton">Videos</h1></a>
